<resources>
    <string name="app_name">TugasPertemuan5</string>
    <string name="nama_film">Nama Filmaaaaaaaaaaa</string>
    <string name="todo">Todo</string>
    <string name="Judul">Katalog\nFilm Sederhana</string>
    <string name="contoh_nframe_layout">Contoh Penggunaan\nFrame Layout</string>
    <string name="macam_macam_nlayout">Macam - Macam\nLayout</string>
    <string name="contoh_penggunaan_linear_layout">Contoh Penggunaan\nLinear Layout</string>
    <string name="contoh_linear_layout_horizontal">Contoh Penggunaan\nLinear Layout Horizontal</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="framelayout">FrameLayout</string>
    <string name="table_layout">Table Layout</string>
    <string name="layout_inflater">Layout Inflater</string>
    <string name="dialog">Dialog</string>
    <string name="relative_layout_1">Relative Layout 1</string>
    <string name="relative_layout_2">Relative Layout 2</string>
    <string name="relative_layout_button">Relative Layout Button</string>
    <string name="contoh_penggunaan_dialog">Contoh Penggunaan\nDialog</string>
    <string name="contoh_penggunaan_linear_layout_horizontal_equal_high">Contoh Penggunaan\nLinear Layout Horizontal : Equal High</string>
    <string name="contoh_penggunaan_linear_layout_horizontal_leftover_high">Contoh Penggunaan\nLinear Layout Horizontal : Leftover High</string>
    <string name="contoh_penggunaan_nlinear_layout">Contoh Penggunaan\nLinear Layout</string>
    <string name="contoh_penggunaan_linear_layout_vertical_equal_high">Contoh Penggunaan\nLinear Layout Vertical : Equal High</string>
    <string name="tugas_pertemuan_5_layout">Tugas Pertemuan 5\nLayout</string>
    <string name="contoh_penggunaan_relative_layout">Contoh Penggunaan\nRelative Layout</string>
    <string name="contoh_penggunaan_table_layout">Contoh Penggunaan\nTable Layout</string>

    <string-array name="data_name">
        <item>"A Star Is Born (2018)"</item>
        <item>"Aquaman (2018)"</item>
        <item>"Avengers: Infinity War (2018)"</item>
        <item>"Bird Box (2018)"</item>
        <item>"Bohemian Rhapsody (2018)"</item>
        <item>"Bumblebee (2018)"</item>
        <item>"Creed II (2018)"</item>
        <item>"Deadpool (2016)"</item>
        <item>"How to Train Your Dragon: The Hidden World (2019)"</item>
        <item>"Dragon Ball Super: Broly (2018)"</item>
        <item>"Glass (2019)"</item>
        <item>"Hunter Killer (2018)"</item>
        <item>"Mary Poppins Returns (2018)"</item>
        <item>"Mortal Engines (2018)"</item>
        <item>"Preman Pensiun (2019)"</item>
        <item>"Robin Hood (2018)"</item>
        <item>"Spider-Man: Into the Spider-Verse (2018)"</item>
        <item>"The Girl in the Spider's Web (2018)"</item>
        <item>"The Mule (2018)"</item>
        <item>"Venom (2018)"</item>
    </string-array>
    <string-array name="data_description">
        <item>"Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm's half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."</item>
        <item>"Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety."</item>
        <item>"Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."</item>
        <item>"On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug."</item>
        <item>"The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed."</item>
        <item>"Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life."</item>
        <item>"As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind."</item>
        <item>"Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called 'Broly' who they've never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what's this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>"In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men"</item>
        <item>"Captain Glass of the USS Arkansas discovers that a coup d'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war."</item>
        <item>"In Depression-era London, a now-grown Jane and Michael Banks, along with Michael's three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives."</item>
        <item>"Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever."</item>
        <item>"Setelah tiga tahun, bisnis kecimpring Muslihat yang sudah pensiun sebagai preman, mengalami masalah. Penjualannya mulai menurun. Muslihat juga menghadapi masalah baru saat Safira, anak perempuan satu-satunya, sudah tumbuh remaja dan mulai didatangi lelaki. Masalah lebih besar kemudian muncul, ketika ada masalah di antara mantan anak buahnya."</item>
        <item>"A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown."</item>
        <item>"Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension."</item>
        <item>"In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist."</item>
        <item>"Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates."</item>
        <item>"Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own."</item>
    </string-array>
    <array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>
</resources>
