<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InflaterLayout.Adapter.Activity.InflaterLayout">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradasi"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/textView_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_bg"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:text="@string/tugas_pertemuan_5_layout"
        android:textAlignment="textStart"
        android:textColor="@color/whire"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_tv"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tv"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/Linear_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/linear_layout" />

        <Button
            android:id="@+id/Relative_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/relative_layout" />

        <Button
            android:id="@+id/FrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/framelayout" />

        <Button
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/table_layout" />

        <Button
            android:id="@+id/LayoutInflater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/layout_inflater" />

        <Button
            android:id="@+id/Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/dialog" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>